# dealsim

./: .dealsim_sessions.json  .dockerignore  .env.example  .gitignore  ANALYTICS_PLAN.md  ARCHITECTURE.md  CHANGELOG.md  CONTINUATION_PROMPT.md  DEPLOY.md  Dockerfile  README.md  deploy.sh  docker-compose.override.yml  docker-compose.production.yml  docker-compose.yml  fly.toml  package-lock.json  package.json  pyproject.toml  railway.json  render.yaml  tailwind.config.js
.claude/: launch.json
docs/: A11Y_AUDIT.md  ACCESSIBILITY_REVIEW_W2.md  ANALYTICS_AUDIT.md  API_INTEGRATION_AUDIT.md  API_REFERENCE.md  API_REVIEW_W1.md  ARCHITECTURE.md  ARCHITECTURE_REVIEW.md  BROWSER_COMPATIBILITY.md  CARE_AUDIT.md  CODE_QUALITY_AUDIT.md  COMPANY_INTERNAL.md  CONCEPT_REVIEW.md  CONVERSION_FUNNEL_AUDIT.md  CONVERSION_REVIEW_W2.md  DATA_ACCURACY_AUDIT.md  DATA_QUALITY_W1.md  DEPENDENCY_AUDIT.md  DEPLOYMENT.md  DEPLOYMENT_AUDIT.md  DEPLOYMENT_REVIEW_W1.md  DISASTER_RECOVERY.md  DOCKER_PRODUCTION_GUIDE.md  DOCUMENTATION_AUDIT.md  ENGINE_CORRECTNESS_AUDIT.md  ENGINE_REVIEW_W1.md  ERROR_HANDLING_AUDIT.md  FEATURE_COMPLETENESS_W2.md  FINAL_TEST_REPORT.md  FIXES_APPLIED_ANALYZER.md  FIXES_APPLIED_ENGINE.md  FIXES_APPLIED_FRONTEND.md  FIXES_APPLIED_PERSISTENCE.md  FIXES_APPLIED_SECURITY.md  FIXES_P0_ROUND2.md  FIXES_P1_ENGINE.md  FIXES_P1_FRONTEND.md  FIXES_PRIVACY.md  FRONTEND_CODE_AUDIT.md  INPUT_VALIDATION_AUDIT.md  (+34 more)
nginx/: dealsim.conf  docker-compose.production.yml  nginx.conf
scripts/: backup.sh  deploy.sh  restore.sh
static/: achievements.js  admin.html  analytics.js  index.html  (+25 more)
(+56 files in other folders)
