[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dealsim-mvp"
version = "0.1.0"
description = "AI-powered negotiation flight simulator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.hatch.build.targets.wheel]
packages = ["src/dealsim_mvp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
